Fixes #4960 - Tables (spreadsheets) in articles are cut off in Zammad UI.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -12846,6 +12846,8 @@ output {
 }
 
 .richtext-content {
+  overflow-x: auto;
+
   &[contenteditable] {
     &,
     &:hover,
